# LiveX

./: .gitignore  .gitmodules  Requirements.md  platformio.ini
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: tagged_release_app.yml
boards/: esp32plc58.json
control/: h5reader.py  pyproject.toml  setup.cfg  setup.py
control/src/livex/: adapter.py  base_adapter.py  base_controller.py  filewriter.py  graph_adapter.py  livex.py  mockModbusClient.py  modbusAddresses.py  packet_decoder.py  pid.py  util.py
control/src/livex/acquisition/: adapter.py  controller.py  sequencer_yaml_writer.py  trigger_manager.py
control/src/livex/controls/: autoSetPointControl.py  camera.py  gradient.py  motor.py
control/src/livex/furnace/: adapter.py  controller.py
control/src/livex/furnace/controls/: autoSetPointControl.py  gradient.py  metadata.py  motor.py  pid.py  thermocoupleManager.py
control/src/livex/graph/: graph_adapter.py
control/src/livex/inference/: adapter.py  controller.py  inference_endpoint.py
control/src/livex/live_data/: controller.py  live_data_adapter.py  processor.py
control/src/livex/metadata/: adapter.py  controller.py  field.py  hdf_writer.py  markdown_writer.py  types.py  yaml_writer.py
control/src/livex/trigger/: adapter.py  controller.py  trigger.py  trigger_controller.py
control/test/config/: cam_exposure_lookup.json  devices.json  graph_adapter.json  graphing.json  livex.cfg  metadata.cfg  metadata.json  odin_data_configs.json
control/test/config/sequences/: acquisition_sequences.py  example_sequences.py  furnace_sequences.py
control/test/config/templates/: metadata.j2
control/test/static/: asset-manifest.json  index.html
control/test/static/css/: main.2cb4b332.css  main.2cb4b332.css.map  main.87dc4f34.css  main.87dc4f34.css.map  main.a6a18a36.css  main.a6a18a36.css.map  odin-server.css
control/test/static/js/: 453.3d8d5df2.chunk.js  453.3d8d5df2.chunk.js.map  787.3bb4366a.chunk.js  787.3bb4366a.chunk.js.map  command_sequencer.js  main.0a36f6fe.js.LICENSE.txt  main.0a36f6fe.js.map  main.2483699b.js.map  main.9b8ff96e.js.LICENSE.txt  main.9b8ff96e.js.map  odin_server.js
control/test/static/livex-react/: package-lock.json  package.json
control/test/static/livex-react/public/: index.html
control/test/static/livex-react/src/: App.js  index.css  utils.js
control/test/static/livex-react/src/components/: AutoSetPointControl.jsx  Camera.jsx  Cameras.jsx  LiveViewSocket.jsx  Metadata.jsx  Motor.jsx  OrcaCamera.jsx  PidControl.jsx  TemperatureGraph.jsx  ThermalGradient.jsx  Trigger.jsx
control/test/static/livex-react/src/components/cameras/: Cameras.jsx  ClickableImage.jsx  ColourMapAccordion.jsx  OrcaCamera.jsx
control/test/static/livex-react/src/components/furnace/: AutoSetPointControl.jsx  DualMonitorGraph.jsx  FurnaceRecording.jsx  InfoPanel.jsx  MonitorGraph.jsx  Motor.jsx  PidControl.jsx  TemperatureGraph.jsx  ThermalGradient.jsx
control/test/static/livex-react/src/components/setup/: Metadata.jsx  TagInput.jsx  Trigger.jsx
control/test/static/livex-vite/: .env.development  index.html  package-lock.json  package.json  vite.config.js
control/test/static/livex-vite/src/: App.jsx  index.css  main.jsx  utils.js
control/test/static/livex-vite/src/components/: DropdownSelector.jsx  GraphPage.jsx  InferencePage.jsx  ResizeableOdinGraph.jsx  SequencerPage.jsx  ToggleSwitch.jsx
control/test/static/livex-vite/src/components/cameras/: Cameras.jsx  ClickableImage.jsx  InferenceCard.jsx  Inferencing.jsx  OrcaCamera.jsx
control/test/static/livex-vite/src/components/furnace/: AutoSetPointControl.jsx  DropdownTest.jsx  FurnaceMeta.jsx  FurnacePage.jsx  FurnaceRecording.jsx  InfoPanel.jsx  MonitorGraph.jsx  Motor.jsx  PidControl.jsx  PidOverride.jsx  ThermalGradient.jsx
control/test/static/livex-vite/src/components/motors/: EncoderStage.jsx  KdcController.jsx  KimController.jsx  Motors.jsx  PiezoStage.jsx
control/test/static/livex-vite/src/components/setup/: Metadata.jsx  TagInput.jsx  Trigger.jsx
data/: CMakeLists.txt
data/cmake/: FindCppflow.cmake  FindTensorflow.cmake  GetGitRevisionDescription.cmake
data/config/: CMakeLists.txt  LiveX-fp.json
data/frameProcessor/: CMakeLists.txt
data/frameProcessor/include/: CMakeLists.txt  LiveXTorchPlugin.h
data/frameProcessor/src/: CMakeLists.txt  LiveXTorchPlugin.cpp
docs/: LiveX_Sequencer.md  Requirements.md  livexInstaller.sh
firmware/livex/: .gitignore  platformio.ini
firmware/livex/include/: buffer.h  config.h  initialise.h  modbusAddresses.h  modbusServerController.h  pidController.h  resources.h  taskComms.h  taskPid.h  utilFunctions.h
firmware/livex/lib/: pins_is.h
firmware/livex/lib/ExpandedGpio/: library.json
firmware/livex/lib/ExpandedGpio/src/: ExpandedGpio.cpp  ExpandedGpio.h  peripheral-ads1015.c  peripheral-ads1015.h  peripheral-mcp23008.c  peripheral-mcp23008.h  peripheral-pca9685.c  peripheral-pca9685.h
firmware/livex/src/: buffer.cpp  devices.cpp  devices.h  initialise.cpp  initialise.h  main.cpp  modbusServerController.cpp  pidController.cpp  taskComms.cpp  taskPid.cpp  utilFunctions.cpp
firmware/trigger/: platformio.ini
firmware/trigger/include/: config.h  modbusServerController.h  modbusUtils.h
firmware/trigger/lib/Ethernet/src/: Ethernet.h
firmware/trigger/src/: main.cpp  modbusServerController.cpp  modbusUtils.cpp
