[metadata]
name = livex
description = LiveX furnace control system
url = https//github.com/stfc-aeg/LiveX
author = Mika Shearwood
author_email = mika.shearwood@stfc.ac.uk
license = Apache License 2.0
long_description = file: README
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    =src

install_requires =
    odin-control @ git+https://git@github.com/odin-detector/odin-control.git@1.5.0
    pymodbus
    h5py

[options.extras_require]
dev =
    mock;python_version<'3'
    requests
    tox
    pytest-asyncio
    pytest-cov
graylog =
    pygelf

[options.packages.find]
where = src

[flake8]
max-line-length = 100

[tool:pytest]
asyncio_mode = strict

[coverage:run]
omit = **/livex/_version.py
# Note only applies when running pytest - for tox run it is overriden in the ini config
data_file = /tmp/livex.coverage

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    src
    **/site-packages/

[versioneer]
VCS = git
style = pep440
versionfile_source = src/livex/_version.py
versionfile_build = livex/_version.py
tag_prefix=

